--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -113,6 +113,39 @@ jobs:
           asset_path: ${{ env.ARTIFACT_PATHNAME }}
           asset_name: ${{ env.ARTIFACT_NAME }}
           asset_content_type: application/tar.gz
+  release-gnu-aarch64:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    # Use container that supports old GLIBC versions and (hopefully) many linux OSs
+    container: quay.io/pypa/manylinux2014_aarch64
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Rust
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
+          echo "${CARGO_HOME:-$HOME/.cargo}/bin" >> $GITHUB_PATH
+      - name: GNU Build
+        run: cargo build --release
+      - name: GNU Create Package
+        run: .github/scripts/package.sh
+        shell: bash
+      - name: Get Artifact Name
+        run: |
+          ARTIFACT_PATHNAME=$(ls ./bender-*.tar.gz | head -n 1)
+          ARTIFACT_NAME=$(basename $ARTIFACT_PATHNAME)
+          echo "ARTIFACT_NAME=${ARTIFACT_NAME}" >> $GITHUB_ENV
+          echo "ARTIFACT_PATHNAME=${ARTIFACT_PATHNAME}" >> $GITHUB_ENV
+        shell: bash
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ env.ARTIFACT_PATHNAME }}
+          asset_name: ${{ env.ARTIFACT_NAME }}
+          asset_content_type: application/tar.gz
   release-macos:
     runs-on: macos-latest
     strategy:
